# new-lang

./: ideas.md  test_input.tc
arc-offset/: Cargo.toml
arc-offset-macros/: Cargo.toml
arc-offset-macros/src/: lib.rs
arc-offset/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: db.rs  db_new.rs  error.rs  files.rs  main.rs  token_tree.rs  tokens.rs
compiler/src/ast/: bnf.md  consumed.rs  errors.rs  literals.rs  macros.rs  mod.rs  pattern.rs  type_or_expr.rs  types.rs
compiler/src/ast/expr/: mod.rs  stack.rs
compiler/src/ast/item/: const_static.rs  fndecl.rs  genericsparams.rs  implblock.rs  import_use.rs  macrodef.rs  mod.rs  proofstmts.rs  traitdef.rs  typedecl.rs
compiler/src/modules/: mod.rs  path.rs
hydra/: Cargo.toml
hydra-macros/: Cargo.toml
hydra-macros/src/: lib.rs  parse.rs
hydra/src/: core.rs  internal.rs  job_id.rs  lib.rs  runtime.rs
parse-macros/: Cargo.toml
parse-macros/src/: lib.rs
src/: db.rs  error.rs  main.rs  token_tree.rs  tokens.rs  utils.rs
src/ast/: bnf.md  consumed.rs  errors.rs  expr.rs  item.rs  literals.rs  macros.rs  mod.rs  pattern.rs  stmt.rs  tests.rs  type_or_expr.rs  types.rs
src/ast/expr/: mod.rs  restrictions.rs  stack.rs
src/ast/item/: const_static.rs  fndecl.rs  genericsparams.rs  implblock.rs  import_use.rs  macrodef.rs  mod.rs  proofstmts.rs  traitdef.rs  typedecl.rs
