[package]
name = "new-lang"
version = "0.1.0"
authors = ["Max Sharnoff <github@max.sharnoff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
unicode-width = "0.1.7"
hydra = { path = "../hydra" }
parse-macros = { path = "../parse-macros" }
tokio = { version = "0.2", features = ["fs", "io-util"] }
