[package]
name = "hydra"
version = "0.1.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydra-macros = { path = "../hydra-macros" }
futures = { version = "0.3.5", features = ["thread-pool"] }
futures-util = "0.3.5"
