[package]
name = "hydra"
version = "0.1.0"
authors = ["sharnoff <github@max.sharnoff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hydra-macros = { path = "../hydra-macros" }
tokio = { version = "0.2", features = ["sync", "rt-core", "rt-threaded"] }
